--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: URDME
 description: Stochastic reaction-diffusion simulation on unstructured meshes.
 google_analytics: 
-show_downloads: true
+show_downloads: false
 theme: jekyll-theme-slate
 
 gems:
