--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,31 @@
+# Windows default autosave extension
+*.asv
 
-stenglib/Fast/fsetop.mexw64
-stenglib/Fast/fsparse.mexw64
-stenglib/Tensor/tprod.mexw64
-stenglib/Tensor/tsum.mexw64
+# OSX / *nix default autosave extension
+*.m~
+
+# Compiled MEX binaries (all platforms)
+*.mex*
+
+# Packaged app and toolbox files
+*.mlappinstall
+*.mltbx
+
+# Generated helpsearch folders
+helpsearch*/
+
+# Simulink code generation folders
+slprj/
+sccprj/
+
+# Matlab code generation folders
+codegen/
+
+# Simulink autosave extension
+*.autosave
+
+# Simulink cache files
+*.slxc
+
+# Octave session info
+octave-workspace
